--- a/safe_queen/android/build.gradle
+++ b/safe_queen/android/build.gradle
@@ -9,6 +9,9 @@ dependencies {
     classpath 'com.android.tools.build:gradle:7.3.0'
     classpath 'com.google.gms:google-services:4.3.8'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+
+
 }
 
 }
