--- a/safe_queen/android/app/src/main/AndroidManifest.xml
+++ b/safe_queen/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> 
+<uses-permission android:name="android.permission.SEND_SMS"/>
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.WAKE_LOCK" />
+<uses-permission android:name="android.permission.VIBRATE" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:label="safe_queen"
         android:name="${applicationName}"
