--- a/safe_queen/pubspec.yaml
+++ b/safe_queen/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   youtube_player_flutter: ^9.0.0
   local_auth: ^2.2.0
   shake: ^2.2.0
+  camera: ^0.10.5+9
  
  
  
@@ -156,6 +157,8 @@ flutter:
     - assets/images/Screenshot 2024-04-07 at 13.08.25.png
     - assets/images/Screenshot 2024-04-07 at 13.10.08.png
     - assets/images/IMG_6211.JPG
+    - assets/images/Screenshot 2024-04-13 at 15.30.12.png
+    - assets/images/images copy.jpeg
     
 
 
