Emergency alert SOS Guardian Button done

--- a/safe_queen/pubspec.yaml
+++ b/safe_queen/pubspec.yaml
@@ -94,7 +94,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/img_rectangle.png"
+  image_path: "assets/images/img_rectangle_25-transformed.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -159,6 +159,7 @@ flutter:
     - assets/images/IMG_6211.JPG
     - assets/images/Screenshot 2024-04-13 at 15.30.12.png
     - assets/images/images copy.jpeg
+    - assets/images/img_rectangle_25-transformed.png
     
 
 
