--- a/safe_queen/android/app/src/main/AndroidManifest.xml
+++ b/safe_queen/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
 <uses-permission android:name="android.permission.WAKE_LOCK" />
 <uses-permission android:name="android.permission.VIBRATE" />
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.USE_BIOMETRIC"/>
     <application
         android:label="safe_queen"
         android:name="${applicationName}"
