--- a/safe_queen/android/app/src/main/AndroidManifest.xml
+++ b/safe_queen/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
     <application
-        android:label="safe_queen"
+        android:label="Safe Queen"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
         android:enableOnBackInvokedCallback="true">
